// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compontent snapshots max date datefield 1`] = `
<div>
  <div
    class="usa-date-range-picker"
  >
    <div
      class="usa-form-group datefield"
    >
      <label
        class="usa-label"
        for="test-4"
        id="test-4-label"
      >
        test-4
      </label>
      <div
        class="usa-hint"
        id="test-4-hint"
      >
        mm/dd/yyyy
      </div>
      <div
        class="usa-date-picker"
        data-max-date="false"
        data-min-date="false"
      >
        <input
          aria-describedby="test-4-hint"
          aria-labelledby="test-4-label"
          class="usa-input"
          id="test-4"
          name="test-4"
        />
      </div>
    </div>
    <div
      class="usa-form-group datefield"
    >
      <label
        class="usa-label"
        for="test-4"
        id="test-4-label"
      >
        test-4
      </label>
      <div
        class="usa-hint"
        id="test-4-hint"
      >
        mm/dd/yyyy
      </div>
      <div
        class="usa-date-picker"
        data-max-date="false"
        data-min-date="false"
      >
        <input
          aria-describedby="test-4-hint"
          aria-labelledby="test-4-label"
          class="usa-input"
          id="test-4"
          name="test-4"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`compontent snapshots min date datefield 1`] = `
<div>
  <div
    class="usa-date-range-picker"
  >
    <div
      class="usa-form-group datefield"
    >
      <label
        class="usa-label"
        for="test-5"
        id="test-5-label"
      >
        test-5
      </label>
      <div
        class="usa-date-picker"
        data-max-date="false"
        data-min-date="false"
      >
        <input
          aria-describedby="test-5-label"
          aria-labelledby="test-5-label"
          class="usa-input"
          id="test-5"
          name="test-5"
        />
      </div>
    </div>
    <div
      class="usa-form-group datefield"
    >
      <label
        class="usa-label"
        for="test-5"
        id="test-5-label"
      >
        test-5
      </label>
      <div
        class="usa-date-picker"
        data-max-date="false"
        data-min-date="false"
      >
        <input
          aria-describedby="test-5-label"
          aria-labelledby="test-5-label"
          class="usa-input"
          id="test-5"
          name="test-5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`compontent snapshots primary datefield 1`] = `
<div>
  <div
    class="usa-date-range-picker"
  >
    <div
      class="usa-form-group datefield"
    >
      <label
        class="usa-label"
        for="test-3"
        id="test-3-label"
      >
        test-3
      </label>
      <div
        class="usa-hint"
        id="test-3-hint"
      >
        mm/dd/yyyy
      </div>
      <div
        class="usa-date-picker"
        data-max-date="false"
        data-min-date="false"
      >
        <input
          aria-describedby="test-3-hint"
          aria-labelledby="test-3-label"
          class="usa-input"
          id="test-3"
          name="test-3"
        />
      </div>
    </div>
    <div
      class="usa-form-group datefield"
    >
      <label
        class="usa-label"
        for="test-3"
        id="test-3-label"
      >
        test-3
      </label>
      <div
        class="usa-hint"
        id="test-3-hint"
      >
        mm/dd/yyyy
      </div>
      <div
        class="usa-date-picker"
        data-max-date="false"
        data-min-date="false"
      >
        <input
          aria-describedby="test-3-hint"
          aria-labelledby="test-3-label"
          class="usa-input"
          id="test-3"
          name="test-3"
        />
      </div>
    </div>
  </div>
</div>
`;
